--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <header class="header">
     <div class="container">
-        <h1>Online PKCE Generator Tool</h1>
+        <h1>Online PKCE Generator Tool ++</h1>
         <p>An online tool to generate code verifier and code challenge for OAuth with PKCE.</p>
     </div>
 </header>
