--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
         <div class="box">
             <form action="">
-                <label for="code_verifier" class="text-title">Code Verifier</label>
+                <label for="code_verifier" class="text-title">Code Verifier OOO</label>
                 <p>
                     This tool serves as an example implementation or for sending manual requests. Never reuse code verifier
                     values.
